--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,11 @@
       width: 100%;
     }
     #logo-blanco {
-      top: 21px;
+      top: 25px;
+      margin-left: -30px;
+    }
+    #logo-blanco img{
+      height: 25px;
     }
     #banner .line > hr{
       width: 103px;
